--- a/_notebooks/2020-10-16-gary_king.ipynb
+++ b/_notebooks/2020-10-16-gary_king.ipynb
@@ -108,7 +108,7 @@
         "rlib.utils.install_packages(\"tidyverse\")\n",
         "rlib.utils.install_packages(\"GGally\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -441,6 +441,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "PZF-BztAnFqR"
+      },
+      "source": [
+        "## 10 more on simukation\n",
+        "\n",
+        "- simulate predictede value\n",
+        "fix x and draw coefficients (estimation unceratny) then calc/draw from model (fundamental uncertany)\n",
+        "\n",
+        "- draw expected value\n",
+        "for one draw of coef draw m predicted values,  take the mean of that to wash out estimation uncertainy"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "ZoGDB3UlVqmv"
       },
       "source": [
@@ -489,6 +504,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "kFGWFFGAWWzP"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qO9Jxka0nFGW"
       },
       "source": [
         ""
